# AI_Ethics_Personalized_Budget_Prediction_Model

./: .gitignore  .pre-commit-config.yaml  AI Ethics Project -- STARTER.ipynb  Makefile  README.md  mlflow.db  model_card.html  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
.tmp_export/baseline_model/baseline_model/: MLmodel  model.pkl
.tmp_export/mitigated_model/mitigated_model/: conda.yaml  model.pkl
app/: ai_ethics_streamlit.py
docs/: data_sheet.md  decision_log.md  model_card.filled.md  model_card.md  risk_assessment.md
models/demo_baseline/: MLmodel
models/demo_mitigated/: MLmodel  requirements.txt
scripts/: export_demo_models.py
src/budget_fairness/: config.py  data.py  evaluation.py  fairness.py  mitigation.py  reporting.py  threshold_sweep.py  train.py
src/budget_fairness.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data_schema.py  test_fairness_metrics.py  test_reweighing.py
